--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
   <!--  footer   -->
  <footer>
     <div class="social">
-      <span class="icon">Check us out<a href="https://twitter.com/">on<i class="fa fa-twitter" aria-hidden="true"></i></a></span>
-      <span class="icon">Check us out<a href="https://www.facebook.com/">on<i class="fa fa-facebook" aria-hidden="true"></i></a></span>
-      <span class="icon">Check us out<a href="https://www.instagram.com/">on<i class="fa fa-instagram" aria-hidden="true"></i></a></span>
+      <span class="icon"><a class="social-media" alt="Twitter icon" href="https://twitter.com/">Check our social media <i class="fa fa-twitter" aria-hidden="true">for updates</i>.</a></span>
+
     </div>
     <p>&copy; Jordan Guzman Gateway 2020</p>
  </footer>
